// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LibraryAsset context provider should provide currentWML 1`] = `
"
<Asset key=(Test)>
    <Import from=(BASE)>
        <Variable key=(basePower) as=(power) />
        <Room key=(DEF) />
    </Import>
    <Feature key=(clockTower)>
        <Description>
            A worn stone clock tower.
        </Description>
    </Feature>
    <Room key=(ABC)>
        <Name>Vortex</Name>
        <Description>
            Vortex
            <Link to=(toggleOpen)>(toggle)</Link>
        </Description>
    </Room>
    <If {open}>
        <Room key=(ABC)>
            <Exit to=(DEF)>welcome</Exit>
        </Room>
    </If>
    <Room key=(DEF)>
        <Name>Welcome</Name>
        <Exit to=(ABC)>vortex</Exit>
    </Room>
    <Variable key=(open) default={false} />
    <Action key=(toggleOpen) src={open = !open} />
</Asset>
"
`;

exports[`LibraryAsset context provider should provide features 1`] = `
<div>
  <div>
    <div>
      <span />
      <span>
        String
      </span>
      <span>
        A worn stone clock tower.
      </span>
    </div>
  </div>
</div>
`;

exports[`LibraryAsset context provider should provide normalForm 1`] = `
"{
    \\"Test\\": {
        \\"key\\": \\"Test\\",
        \\"tag\\": \\"Asset\\",
        \\"instance\\": false,
        \\"Story\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [],
                \\"data\\": {
                    \\"tag\\": \\"Asset\\",
                    \\"key\\": \\"Test\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"key\\": \\"Import-0\\",
                            \\"tag\\": \\"Import\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"clockTower\\",
                            \\"tag\\": \\"Feature\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"ABC\\",
                            \\"tag\\": \\"Room\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"If-0\\",
                            \\"tag\\": \\"If\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"DEF\\",
                            \\"tag\\": \\"Room\\",
                            \\"index\\": 1
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"open\\",
                            \\"tag\\": \\"Variable\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"toggleOpen\\",
                            \\"tag\\": \\"Action\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"Import-0\\": {
        \\"key\\": \\"Import-0\\",
        \\"tag\\": \\"Import\\",
        \\"from\\": \\"BASE\\",
        \\"mapping\\": {
            \\"basePower\\": {
                \\"key\\": \\"basePower\\",
                \\"type\\": \\"Variable\\"
            },
            \\"DEF\\": {
                \\"key\\": \\"DEF\\",
                \\"type\\": \\"Room\\"
            }
        },
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Import\\",
                    \\"mapping\\": {
                        \\"basePower\\": {
                            \\"key\\": \\"basePower\\",
                            \\"type\\": \\"Variable\\"
                        },
                        \\"DEF\\": {
                            \\"key\\": \\"DEF\\",
                            \\"type\\": \\"Room\\"
                        }
                    },
                    \\"from\\": \\"BASE\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"key\\": \\"basePower\\",
                            \\"tag\\": \\"Variable\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"DEF\\",
                            \\"tag\\": \\"Room\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"basePower\\": {
        \\"key\\": \\"basePower\\",
        \\"tag\\": \\"Variable\\",
        \\"default\\": \\"\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"key\\": \\"basePower\\",
                    \\"from\\": \\"basePower\\",
                    \\"tag\\": \\"Variable\\"
                },
                \\"children\\": []
            }
        ]
    },
    \\"DEF\\": {
        \\"key\\": \\"DEF\\",
        \\"tag\\": \\"Room\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"key\\": \\"DEF\\",
                    \\"from\\": \\"DEF\\",
                    \\"tag\\": \\"Room\\"
                },
                \\"children\\": []
            },
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"DEF\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Name\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"Welcome\\"
                                },
                                \\"children\\": []
                            }
                        ]
                    },
                    {
                        \\"data\\": {
                            \\"key\\": \\"DEF#ABC\\",
                            \\"tag\\": \\"Exit\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"clockTower\\": {
        \\"key\\": \\"clockTower\\",
        \\"tag\\": \\"Feature\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Feature\\",
                    \\"key\\": \\"clockTower\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Description\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"A worn stone clock tower.\\"
                                },
                                \\"children\\": []
                            }
                        ]
                    }
                ]
            }
        ]
    },
    \\"ABC\\": {
        \\"key\\": \\"ABC\\",
        \\"tag\\": \\"Room\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"ABC\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Name\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"Vortex\\"
                                },
                                \\"children\\": []
                            }
                        ]
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Description\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"Vortex \\"
                                },
                                \\"children\\": []
                            },
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"Link\\",
                                    \\"text\\": \\"(toggle)\\",
                                    \\"to\\": \\"toggleOpen\\"
                                },
                                \\"children\\": [
                                    {
                                        \\"data\\": {
                                            \\"tag\\": \\"String\\",
                                            \\"value\\": \\"(toggle)\\"
                                        },
                                        \\"children\\": []
                                    }
                                ]
                            }
                        ]
                    }
                ]
            },
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"If-0\\",
                        \\"tag\\": \\"If\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"ABC\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"key\\": \\"ABC#DEF\\",
                            \\"tag\\": \\"Exit\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"If-0\\": {
        \\"key\\": \\"If-0\\",
        \\"tag\\": \\"If\\",
        \\"conditions\\": [
            {
                \\"if\\": \\"open\\"
            }
        ],
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"If\\",
                    \\"conditions\\": [
                        {
                            \\"if\\": \\"open\\"
                        }
                    ]
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"key\\": \\"ABC\\",
                            \\"tag\\": \\"Room\\",
                            \\"index\\": 1
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"ABC#DEF\\": {
        \\"key\\": \\"ABC#DEF\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"DEF\\",
        \\"from\\": \\"ABC\\",
        \\"name\\": \\"welcome\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"If-0\\",
                        \\"tag\\": \\"If\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"ABC\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Exit\\",
                    \\"name\\": \\"welcome\\",
                    \\"key\\": \\"ABC#DEF\\",
                    \\"from\\": \\"ABC\\",
                    \\"to\\": \\"DEF\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"String\\",
                            \\"value\\": \\"welcome\\"
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"DEF#ABC\\": {
        \\"key\\": \\"DEF#ABC\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"ABC\\",
        \\"from\\": \\"DEF\\",
        \\"name\\": \\"vortex\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Exit\\",
                    \\"name\\": \\"vortex\\",
                    \\"key\\": \\"DEF#ABC\\",
                    \\"from\\": \\"DEF\\",
                    \\"to\\": \\"ABC\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"String\\",
                            \\"value\\": \\"vortex\\"
                        },
                        \\"children\\": []
                    }
                ]
            }
        ]
    },
    \\"open\\": {
        \\"key\\": \\"open\\",
        \\"tag\\": \\"Variable\\",
        \\"default\\": \\"false\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Variable\\",
                    \\"key\\": \\"open\\",
                    \\"default\\": \\"false\\"
                },
                \\"children\\": []
            }
        ]
    },
    \\"toggleOpen\\": {
        \\"key\\": \\"toggleOpen\\",
        \\"tag\\": \\"Action\\",
        \\"src\\": \\"open = !open\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"key\\": \\"Test\\",
                        \\"tag\\": \\"Asset\\",
                        \\"index\\": 0
                    }
                ],
                \\"data\\": {
                    \\"tag\\": \\"Action\\",
                    \\"key\\": \\"toggleOpen\\",
                    \\"src\\": \\"open = !open\\"
                },
                \\"children\\": []
            }
        ]
    }
}"
`;

exports[`LibraryAsset context provider should provide rooms 1`] = `
<div>
  <div>
    <div>
      <span>
        Welcome
      </span>
      <span>
        String
      </span>
      <span>
        A welcome area
      </span>
    </div>
    <div>
      <span>
        Vortex
      </span>
      <span>
        String
      </span>
      <span>
        Vortex 
      </span>
      <span>
        Link
      </span>
      <span>
        toggleOpen
      </span>
    </div>
  </div>
</div>
`;
